--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
                 <p class = "about_me">
 
-                    Nazywam się Cezary Lipowski. Jestem studentem na drugim roku Informatyki w <a href = "https://pansim.edu.pl/" id = "PANS_Link">Państwowej Akademii Nauk Stosowanych im. Ignacego Mościckiego w Ciechanowie</a>.
+                    Nazywam się Cezary Lipowski. Jestem studentem na drugim roku Informatyki w <a href = "https://pansim.edu.pl/" target = "_blank" id = "PANS_Link">Państwowej Akademii Nauk Stosowanych im. Ignacego Mościckiego w Ciechanowie</a>.
                     
                 </p>
                     
